--- a/Site/index.html
+++ b/Site/index.html
@@ -8,5 +8,6 @@
 <body>
 <h1>Hello Course Era</h1>
 <h2>This is the first page of the website</h2>
+<h3>I am enjoying this course</h3>
 </body>
 </html>
