odered and unodred lists

--- a/Site/index.html
+++ b/Site/index.html
@@ -6,8 +6,67 @@
 	<title></title>
 </head>
 <body>
-<h1>Hello Course Era</h1>
+	<header>This part contains company logo or tagline</header>
+	<nav style="color: green;">here some different tags or links</nav>
+<h1 style="color: green;font-size: 50 px; text-align: center;">Hello Course Era</h1>
 <h2>This is the first page of the website</h2>
-<h3>I am enjoying this course</h3>
+<h3> This is heading 3</h3>
+<h4>this is heading 4</h4>
+<section>
+	Section 1
+	<article>Article 1 in section 1</article>
+	<article>Article 2 in section 1</article>
+	<article>Article 3 in section 1</article>
+</section>
+<section>
+	Section 2
+	<article> Article 1 in section 2</article>
+	<article> Article 2 in section 2</article>
+	<article> Article 3 in section 2</article>
+	<div>This is regular DIV element</div>
+</section>
+<div>Here we are going to define an un-odered list
+My typical dinner shoppig list is:
+<ul style="color: darkred;">
+	<li>Milk</li>
+	<li>Donuts</li>
+	<li>Cookies</li>
+	<li>
+		 <ul>
+		 	<li>Chocolate</li>
+		 	<li>Sugar</li>
+		 	<li>Peanut Butter</li>
+		 </ul>
+	</li>
+	<li>Lays</li>
+
+	   
+</ul></div>
+<div>Now We are Creating the list of the steps for Orea shake
+<ol style="color: darkviolet;">
+	<li>Open books of cookies</li>
+	<li>Take out biscuits</li>
+	<li>Take out Blender</li>
+	<ol style="color: darkblue;">
+		<li>Place jug on Blennder</li>
+		<li>Plug in switch</li>
+		<li>Turn on switch</li>
+	</ol>
+	<li>Pour Sugar</li>
+	<li>Pour Milk</li>
+	<li>Add Cookies</li>
+	<li>Ready to blend</li>
+	<li>Shake is ready</li>
+
+</ol></div>
+<aside>
+	There is some related information
+</aside>
+<footer>
+	<hr>
+	<p style=" text-align: center;" onclick="alert('Emailing me is useless')">
+		contact me @:saqlainhaider396@gmail.com
+	</p>
+</footer>
 </body>
 </html>
